design: edit style of flags and availability

--- a/src/Resources/styles/front/common/components/box/detail.less
+++ b/src/Resources/styles/front/common/components/box/detail.less
@@ -157,6 +157,18 @@
             &--not-available {
                 color: @color-gray;
             }
+
+            &--out-of-stock {
+                color: @color-red;
+            }
+
+            &--on-request {
+                color: @color-gray;
+            }
+
+            &--preparing {
+                color: @color-pink;
+            }
         }
 
         &__next-line {
