--- a/src/Resources/styles/front/common/components/in/flag.less
+++ b/src/Resources/styles/front/common/components/in/flag.less
@@ -31,12 +31,14 @@
         height: @in-flag-item-size-small;
         margin-bottom: @in-flag-item-top-gap;
         text-align: center;
+        padding: 0 5px;
 
         overflow: hidden;
         border-radius: 50%;
         color: @color-f;
         font-size: 10px;
         font-weight: 700;
+        word-break: break-all;
 
         &:last-child {
             margin-bottom: 0;
