--- a/templates/Front/Content/Product/productListMacro.html.twig
+++ b/templates/Front/Content/Product/productListMacro.html.twig
@@ -43,6 +43,10 @@
                                                 </div>
                                             {% endif %}
                                         </div>
+                                        <div class="list-products__item__info__availability__spacer"></div>
+                                        <div class="list-products__item__info__availability__text" style="color: #7bbd70;">
+                                            <span class="box-detail__availability__date">{{ product.calculatedAvailability.name }}</span>
+                                        </div>
                                     </div>
                                 {% endif %}
 
