--- a/templates/Front/Content/Product/deliveryDateMacro.html.twig
+++ b/templates/Front/Content/Product/deliveryDateMacro.html.twig
@@ -22,6 +22,15 @@
         {% elseif showNotAvailable %}
             <span class="box-detail__availability__date box-detail__availability__date--not-available">{{ 'Momentálně nedostupné'|trans }}</span>
         {% else %}
-            <span class="box-detail__availability__date">{{ product.calculatedAvailability.name }}</span>
+            {# TODO PRG - BG-6693: pridať funkčnosť pre dostupnosť #}
+            {% if 1 == 1 %} {# Skladem #}
+                <span class="box-detail__availability__date">{{ product.calculatedAvailability.name }}</span>
+            {% elseif 1 == 2 %} {# Nedostupne #}
+                <span class="box-detail__availability__date box-detail__availability__date--out-of-stock">{{ product.calculatedAvailability.name }}</span>
+            {% elseif 1 == 3 %} {# Na dotaz #}
+                <span class="box-detail__availability__date box-detail__availability__date--on-request">{{ product.calculatedAvailability.name }}</span>
+            {% elseif 1 == 4 %} {# Pripravujeme #}
+                <span class="box-detail__availability__date box-detail__availability__date--preparing">{{ product.calculatedAvailability.name }}</span>
+            {% endif %}
         {% endif %}
 {% endmacro %}
