design - product detail - de constants

--- a/src/Shopsys/ShopBundle/Resources/views/Front/Content/Product/boxDetail.html.twig
+++ b/src/Shopsys/ShopBundle/Resources/views/Front/Content/Product/boxDetail.html.twig
@@ -117,7 +117,7 @@
                                         class="box-detail__variants__title__link underline-small"
                                         onclick="Shopsys.window({ content: '{{ render(controller('ShopsysShopBundle:Front/Article:detailForModal', { 'id': productSizeArticleId }))|escape('js') }}', cssClass: 'window-popup--wide' }); return false;"
                                     >
-                                        {{ 'Jak vybrat správnou velikost?' }}
+                                        {{ 'Jak vybrat správnou velikost?'|trans }}
                                     </a>
                                 </div>
                                 <ul class="list-variants">
