remove old IE support
- see https://github.com/shopsys/shopsys/pull/1461

--- a/src/Shopsys/ShopBundle/Resources/styles/front/common/components/box/pickup-place.less
+++ b/src/Shopsys/ShopBundle/Resources/styles/front/common/components/box/pickup-place.less
@@ -21,7 +21,7 @@
             margin-bottom: 10px;
 
             @media @query-sm {
-                flex: 0 1 @box-pick-up-place-in-max-width;
+                width: @box-pick-up-place-in-max-width;
                 max-width: @box-pick-up-place-in-max-width;
                 margin-bottom: 0;
             }
@@ -31,7 +31,6 @@
             width: 100%;
 
             @media @query-sm {
-                flex: 0 0 auto;
                 width: auto;
                 padding-left: 10px;
             }
