--- a/src/Shopsys/ShopBundle/Resources/styles/front/common/components/list/images.less
+++ b/src/Shopsys/ShopBundle/Resources/styles/front/common/components/list/images.less
@@ -15,19 +15,19 @@
         margin-bottom: @list-images-gap;
 
         @media @query-sm {
-            flex: 0 100%/3;
+            width:100%/3;
         }
 
         @media @query-md {
-            flex: 0 100%/3;
+            width:100%/3;
         }
 
         @media @query-vl {
-            flex: 0 100%/5;
+            width:100%/5;
         }
 
         @media @query-xl {
-            flex: 0 100%/6;
+            width:100%/6;
         }
 
         &__block {
