--- a/src/Shopsys/ShopBundle/Resources/styles/front/common/components/list/products-line.less
+++ b/src/Shopsys/ShopBundle/Resources/styles/front/common/components/list/products-line.less
@@ -59,7 +59,7 @@
             width: 100%;
 
             @media @query-md {
-                flex: 0 @list-products-line-item-price-width;
+                width:@list-products-line-item-price-width;
             }
 
             &__item {
