[BG-6664] edit border radius and button with input

--- a/src/Shopsys/ShopBundle/Resources/styles/front/common/components/box/cookies.less
+++ b/src/Shopsys/ShopBundle/Resources/styles/front/common/components/box/cookies.less
@@ -27,7 +27,7 @@
     background: @box-cookies-background;
     transition: @transition transform;
     border: 3px solid @color-black;
-    border-radius: @radius @radius 0 0;
+    border-radius: @radius;
 
     @media @query-md {
         height: @box-cookies-height;
