--- a/src/Shopsys/ShopBundle/Resources/views/Front/Content/PersonalData/index.html.twig
+++ b/src/Shopsys/ShopBundle/Resources/views/Front/Content/PersonalData/index.html.twig
@@ -31,7 +31,7 @@
                         {{ form_row(form.email, {errors_attr: { class: 'form-error--under' }}) }}
                     </div>
                     <div class="wrap-article__row__half">
-                        {{ form_row(form.send, {label: 'Odeslat na mail'|trans, attr: {class: 'btn btn--success btn--with-input'}}) }}
+                        {{ form_row(form.send, {label: 'Odeslat na mail'|trans, attr: {class: 'btn btn--success'}}) }}
                     </div>
                 </div>
             {{ form_end(form) }}
