--- a/src/Shopsys/ShopBundle/Resources/views/Front/Content/Registration/resetPassword.html.twig
+++ b/src/Shopsys/ShopBundle/Resources/views/Front/Content/Registration/resetPassword.html.twig
@@ -13,17 +13,17 @@
     <div class="web__container">
         <h1 class="in-title in-title--big in-title--center">{{ 'Forgotten password'|trans }}</h1>
 
-        <div class="wrap-well">
+        <div class="wrap-well wrap-well--big-padding">
 
             {{ form_errors(form) }}
 
             {{ form_start(form) }}
-                <div class="wrap-article__row wrap-article__row--center">
-                    <div>
+                <div class="wrap-article__row">
+                    <div class="wrap-article__row__half">
                         {{ form_row(form.email, { label: 'E-mail'|trans, errors_attr: { class: 'form-error--under' } }) }}
                     </div>
-                    <div>
-                        {{ form_widget(form.submit, { label: 'Reset password'|trans, attr: {class: 'btn btn--success btn--with-input'} }) }}
+                    <div class="wrap-article__row__half">
+                        {{ form_widget(form.submit, { label: 'Reset password'|trans, attr: {class: 'btn btn--success'} }) }}
                     </div>
                 </div>
             {{ form_end(form) }}
