--- a/src/Shopsys/ShopBundle/Resources/views/Front/Content/Article/list.html.twig
+++ b/src/Shopsys/ShopBundle/Resources/views/Front/Content/Article/list.html.twig
@@ -4,7 +4,7 @@
         <li class="list-articles__item">
             <div class="list-articles__item__image">
                 <a href="{{ url }}" class="list-articles__item__image__link">
-                    {{ image(blogArticle, { size: 'list', alt: blogArticle.name, lazy: true }) }}
+                    {{ image(blogArticle, { size: 'list', alt: blogArticle.name }) }}
                 </a>
             </div>
             <div class="list-articles__item__content">
