--- a/src/Shopsys/ShopBundle/Resources/views/Front/Content/Cart/index.html.twig
+++ b/src/Shopsys/ShopBundle/Resources/views/Front/Content/Cart/index.html.twig
@@ -44,7 +44,7 @@
                                             </div>
                                             <div class="table-cart__cell__image">
                                                 <a href="{{ cartItemUrl }}" title="{{ cartItem.product.name }}">
-                                                    {{ image(cartItem.product.productForCreatingImageAccordingToVariant, { size: 'biggerThumbnail', lazy: true }) }}
+                                                    {{ image(cartItem.product.productForCreatingImageAccordingToVariant, { size: 'biggerThumbnail' }) }}
                                                 </a>
                                             </div>
                                             <div class="table-cart__cell__name js-cart-item-name">
