--- a/src/Shopsys/ShopBundle/Resources/views/Front/Content/Blog/Category/detail.html.twig
+++ b/src/Shopsys/ShopBundle/Resources/views/Front/Content/Blog/Category/detail.html.twig
@@ -33,7 +33,7 @@
                                         <li class="list-articles-blog__item list-articles-blog__item--full-size">
                                             <div class="list-articles-blog__item__image">
                                                 <a href="{{ url }}" class="list-articles-blog__item__image__link" title="{{ blogArticle.name }}">
-                                                    {{ image(blogArticle, { size: 'list', alt: blogArticle.name, lazy: true }) }}
+                                                    {{ image(blogArticle, { size: 'list', alt: blogArticle.name }) }}
                                                 </a>
                                             </div>
                                             <div class="list-articles-blog__item__content">
