--- a/src/Shopsys/ShopBundle/Resources/views/Front/Content/Category/categoryList.html.twig
+++ b/src/Shopsys/ShopBundle/Resources/views/Front/Content/Category/categoryList.html.twig
@@ -8,7 +8,7 @@
             <li class="list-categories__item">
                 <a href="{{ url('front_product_list', { id: category.id }) }}"
                 class="list-categories__link">
-                    {{ image(category, { alt: category.name, lazy: true }) }}
+                    {{ image(category, { alt: category.name }) }}
                     <div class="list-categories__button">
                          <span class="btn">{{ category.name }}</span>
                     </div>
