product list: action prices are now displayed properly
- it was wrong to store "is_default" field for given price as these prices are already calculated using ProductPriceCalculation::calculateProductPriceForPricingGroup
	- i.e. there are already calculated "action price" or "pricing group" discounts
- instead, a proper "default_price" for default pricing group is stored into elasticsearch
- productListMacro: the same condition as in boxDetail is used for displaying "action" price

--- a/src/Shopsys/ShopBundle/Resources/views/Front/Content/Product/productListMacro.html.twig
+++ b/src/Shopsys/ShopBundle/Resources/views/Front/Content/Product/productListMacro.html.twig
@@ -45,7 +45,7 @@
                                         {% else %}
                                             {{ productSellingPrice.priceWithVat|price }}
                                         {% endif %}
-                                        {% if productSellingPrice.isActionPrice and not productSellingPrice.priceFrom %}
+                                        {% if (productSellingPrice.isActionPrice and not productSellingPrice.priceFrom) %}
                                             <div class="list-products__item__info__price__item__old">
                                                 {{ productSellingPrice.defaultProductPrice.priceWithVat|price }}
                                             </div>
