--- a/templates/Front/Inline/Cart/addProduct.html.twig
+++ b/templates/Front/Inline/Cart/addProduct.html.twig
@@ -1,7 +1,7 @@
 {{ form_start(form, {attr: {class: 'js-add-product dont-print', 'data-ajax-url': url('front_cart_add_product_ajax'), 'multipleForm': true}}) }}
-    <div class="box-detail-add__action">
+    <div class="box-detail-add__action{% if type == 'small' %} box-detail-add__action--in-product-list{% endif %}">
         <div class="box-detail-add__action__spinbox">
-            <span class="form-input-spinbox js-spinbox">
+            <span class="form-input-spinbox{% if type == 'small' %} form-input-spinbox--small{% endif %} js-spinbox">
                 {{ form_widget(form.quantity, { attr: { class: 'form-input-spinbox__input input-no-style js-spinbox-input', 'data-spinbox-min': product.realMinimumAmount, 'data-spinbox-step': product.amountMultiplier } }) }}
                 <button type="button" class="btn-no-style form-input-spinbox__btn js-spinbox-plus"><i class="svg svg-plus"></i></button>
                 <button type="button" class="btn-no-style form-input-spinbox__btn form-input-spinbox__btn--minus js-spinbox-minus"><i class="svg svg-minus"></i></button>
@@ -13,12 +13,12 @@
             {% set cssClass = 'btn--disabled' %}
         {% endif %}
 
-        <div class="box-detail-add__action__button">
-            {% if type == 'large' %}
-                {{ form_widget(form.add, {label: '<i class="svg svg-cart"></i>Přidat do košíku'|trans, attr: {class: cssClass ~ ' btn--success btn--large', disabled: disabled, 'data-hard-disabled': hardDisabled }}) }}
-            {% else %}
-                {{ form_widget(form.add, {label: 'Přidat do košíku'|trans, attr: {class: cssClass ~ ' btn--success btn--full-width', disabled: disabled, 'data-hard-disabled': hardDisabled }}) }}
-            {% endif %}
-        </div>
+        {% if type == 'large' %}
+            {{ form_widget(form.add, {label: '<i class="svg svg-cart"></i>Přidat do košíku'|trans, attr: {class: cssClass ~ 'box-detail-add__action__button btn--success btn--large', disabled: disabled, 'data-hard-disabled': hardDisabled }}) }}
+        {% elseif type == 'small' %}
+            {{ form_widget(form.add, {label: '<i class="svg svg-cart"></i>Přidat do košíku'|trans, attr: {class: cssClass ~ 'box-detail-add__action__button btn--success', disabled: disabled, 'data-hard-disabled': hardDisabled }}) }}   
+        {% else %}
+            {{ form_widget(form.add, {label: 'Přidat do košíku'|trans, attr: {class: cssClass ~ 'box-detail-add__action__button btn--success btn--full-width', disabled: disabled, 'data-hard-disabled': hardDisabled }}) }}
+        {% endif %}
     </div>
 {{ form_end(form) }}
