[BG-6638] edit border radius of items

--- a/src/Shopsys/ShopBundle/Resources/styles/front/common/components/box/blog.less
+++ b/src/Shopsys/ShopBundle/Resources/styles/front/common/components/box/blog.less
@@ -57,6 +57,7 @@
         padding-bottom: 0;
 
         border: 3px solid @color-border;
+        border-radius: @radius;
     }
 
     &__title {
@@ -99,6 +100,7 @@
             font-size: 13px;
             text-decoration: none;
             text-transform: uppercase;
+            border-radius: @radius;
 
             &:last-child {
                 margin-bottom: 0;
