--- a/src/Shopsys/ShopBundle/Resources/styles/front/common/components/box/order-done.less
+++ b/src/Shopsys/ShopBundle/Resources/styles/front/common/components/box/order-done.less
@@ -34,6 +34,7 @@
 
         background-color: @color-light;
         color: @color-brown;
+        border-radius: @radius;
 
         @media @query-md {
             padding: 50px 74px;
