--- a/src/Shopsys/ShopBundle/Resources/styles/front/common/components/in/article.less
+++ b/src/Shopsys/ShopBundle/Resources/styles/front/common/components/in/article.less
@@ -33,6 +33,10 @@
     &__main-img {
         margin-bottom: 20px;
         text-align: center;
+
+        img {
+            border-radius: @radius;
+        }
     }
 
     &__img-caption {
