--- a/src/Shopsys/ShopBundle/Resources/styles/front/common/components/in/user-text.less
+++ b/src/Shopsys/ShopBundle/Resources/styles/front/common/components/in/user-text.less
@@ -94,6 +94,8 @@
     img {
         display: block;
         height: auto !important;
+
+        border-radius: @radius;
     }
 
     img, .in-user-text__image, .in-user-text__image--with-text  {
