--- a/src/Shopsys/ShopBundle/Resources/styles/front/common/components/list/articles-blog.less
+++ b/src/Shopsys/ShopBundle/Resources/styles/front/common/components/list/articles-blog.less
@@ -39,6 +39,8 @@
             img {
                 max-width: @list-articles-blog-item-image-width;
                 max-height: @list-articles-blog-item-image-height;
+
+                border-radius: @radius;
             }
         }
 
