--- a/src/Shopsys/ShopBundle/Resources/styles/front/common/components/list/products.less
+++ b/src/Shopsys/ShopBundle/Resources/styles/front/common/components/list/products.less
@@ -263,6 +263,7 @@
 
                 font-size: 0;
                 border: 1px solid @color-gray;
+                border-radius: @radius-small;
 
                 img {
                     .center-image();
