--- a/src/Shopsys/ShopBundle/Resources/styles/front/common/components/window/popup.less
+++ b/src/Shopsys/ShopBundle/Resources/styles/front/common/components/window/popup.less
@@ -23,6 +23,7 @@
     will-change: transform;
 
     background: @color-f;
+    border-radius: @radius;
     box-shadow: 0 0 20px rgba(0,0,0, 0.3);
     transition: @transition transform;
 
