--- a/src/Shopsys/ShopBundle/Resources/styles/front/common/layout/header/search.less
+++ b/src/Shopsys/ShopBundle/Resources/styles/front/common/layout/header/search.less
@@ -16,11 +16,9 @@
         }
 
         .box-search & {
-            flex-direction: column;
+            flex-direction: row;
 
-            @media @query-md {
-                flex-direction: row;
-            }
+            border-radius: @radius;
         }
 
         &__input {
