--- a/src/Shopsys/ShopBundle/Resources/views/Front/Content/Order/PromoCode/index.html.twig
+++ b/src/Shopsys/ShopBundle/Resources/views/Front/Content/Order/PromoCode/index.html.twig
@@ -1,4 +1,4 @@
-<div class="box-preview__row box-preview__row--dark">
+<div class="box-preview__row box-preview__row--dark box-preview__row--without-radius-bottom">
     <div class="box-preview__coupone">
         <div class="box-preview__coupone__title">
             <label>
