--- a/src/Shopsys/ShopBundle/Resources/styles/front/common/components/wrap/box.less
+++ b/src/Shopsys/ShopBundle/Resources/styles/front/common/components/wrap/box.less
@@ -2,6 +2,7 @@
     margin-bottom: @margin-gap;
 
     border: 1px solid @color-border;
+    border-radius: @radius;
 
     &__title {
         padding: 10px 20px;
@@ -9,6 +10,7 @@
 
         border-bottom: 1px solid @color-border;
         background: @color-box;
+        border-radius: @radius/2 @radius/2 0 0;
     }
 
     &__in {
