--- a/src/Shopsys/ShopBundle/Resources/styles/front/common/components/list/article-product.less
+++ b/src/Shopsys/ShopBundle/Resources/styles/front/common/components/list/article-product.less
@@ -28,7 +28,11 @@
             padding-right: 10px;
 
             img {
-                width: 100%;
+                max-height: 100%;
+            }
+
+            picture {
+                margin: 0 auto;
             }
         }
 
