Added delivery date to vertical product list.

--- a/src/Shopsys/ShopBundle/Resources/styles/front/common/components/list/article-product.less
+++ b/src/Shopsys/ShopBundle/Resources/styles/front/common/components/list/article-product.less
@@ -57,6 +57,7 @@
                 color: @color-brown-light;
                 font-family: @font-alt;
                 font-size: @font-size-extra-small;
+                margin-bottom: 8px;
             }
 
             &__price {
