contact form main text now can be managed in admin
- see https://github.com/shopsys/shopsys/pull/1522

--- a/templates/Front/Content/ContactForm/contactForm.html.twig
+++ b/templates/Front/Content/ContactForm/contactForm.html.twig
@@ -1,5 +1,5 @@
 {{ form_start(form, {attr: {'data-on-submit': 'contactFormAjaxSubmit'}}) }}
-<div class="in-title in-title--center in-title--big">{{ 'Máte dotaz?'|trans }}</div>
+<div class="in-title in-title--center in-title--big">{{ mainText|raw }}</div>
 
 {{ form_errors(form) }}
 <div class="wrap-article__row">
