[BG-6665] edit small css issues

--- a/src/Shopsys/ShopBundle/Resources/styles/front/common/components/box/dropdown.less
+++ b/src/Shopsys/ShopBundle/Resources/styles/front/common/components/box/dropdown.less
@@ -248,6 +248,7 @@
 
             @media @query-md {
                 right: -120px;
+                left: -260px;
                 width: @cart-detail-width;
             }
 
