--- a/src/Shopsys/ShopBundle/Resources/styles/front/common/components/box/orders.less
+++ b/src/Shopsys/ShopBundle/Resources/styles/front/common/components/box/orders.less
@@ -1,5 +1,15 @@
 .box-orders {
     &__table {
         width: 100%;
+    
+        &__cell {
+            &--small {
+                width: 120px;
+            }
+
+            &--medium {
+                width: 180px;
+            }
+        }
     }
 }
