--- a/src/Shopsys/ShopBundle/Resources/styles/front/common/components/form/line.less
+++ b/src/Shopsys/ShopBundle/Resources/styles/front/common/components/form/line.less
@@ -34,7 +34,7 @@
     &__error {
         position: relative;
         width: 100%;
-        padding-left: 66px;
+        padding-left: @input-label-width;
         margin-top: 5px;
 
         font-size: 0;
