--- a/src/Shopsys/ShopBundle/Resources/styles/front/common/components/table/params.less
+++ b/src/Shopsys/ShopBundle/Resources/styles/front/common/components/table/params.less
@@ -30,4 +30,9 @@
 
         font-weight: bold;
     }
+
+    &__status-name {
+        display: inline-block;
+        margin: 5px 10px 5px 0;
+    }
 }
