--- a/src/Shopsys/ShopBundle/Resources/styles/front/common/core/typography.less
+++ b/src/Shopsys/ShopBundle/Resources/styles/front/common/core/typography.less
@@ -30,7 +30,8 @@
 // Heading addition
 .heading-addition {
     color: @color-inactive;
-    font-size: 60%;
+    font-size: 80%;
+    text-transform: none;
 }
 
 // Style of default link
