--- a/src/Shopsys/ShopBundle/Resources/styles/front/common/components/box/order.less
+++ b/src/Shopsys/ShopBundle/Resources/styles/front/common/components/box/order.less
@@ -70,6 +70,7 @@
         &__title {
             display: block;
             text-align: center;
+            margin-bottom: 20px;
 
             color: @color-base;
             font-family: @font-alt;
