--- a/src/Shopsys/ShopBundle/Resources/views/Front/Content/Customer/orderDetail.html.twig
+++ b/src/Shopsys/ShopBundle/Resources/views/Front/Content/Customer/orderDetail.html.twig
@@ -21,7 +21,7 @@
                     <tr>
                         <th>{{ 'Status'|trans }}: </th>
                         <td>
-                            {{ order.status.name }}
+                            <span class="table-params__status-name">{{ order.status.name }}</span>
                             {% if order.payment.goPay is same as (true) and order.gopayPaid == false %}
                                 <a class="btn btn--success btn--mini" href="{{ url('front_order_repeat_gopay_payment', { urlHash: order.urlHash }) }}">
                                     {{ 'Opakovat platbu'|trans }}
