--- a/src/Shopsys/ShopBundle/Resources/views/Front/Content/Customer/orders.html.twig
+++ b/src/Shopsys/ShopBundle/Resources/views/Front/Content/Customer/orders.html.twig
@@ -20,22 +20,24 @@
             <div class="in-scroll box-orders margin-bottom-20">
                 <div class="in-scroll__in">
                     <table class="table-main box-orders__table">
-                        <tr>
-                            <th>{{ 'Order number'|trans }}</th>
-                            <th>{{ 'Creation date'|trans }}</th>
-                            <th>{{ 'Current status'|trans }}</th>
-                            <th class="text-right">{{ 'Number of items'|trans }}</th>
-                            <th>{{ 'Shipping'|trans }}</th>
-                            <th>{{ 'Payment'|trans }}</th>
-                            <th class="text-right">{{ 'Total price including VAT'|trans }}</th>
-                            <th class="text-center">{{ 'Detail'|trans }}</th>
-                        </tr>
+                        <thead>
+                            <tr>
+                                <th>{{ 'Order number'|trans }}</th>
+                                <th class="box-orders__table__cell box-orders__table__cell--small">{{ 'Creation date'|trans }}</th>
+                                <th class="box-orders__table__cell box-orders__table__cell--medium">{{ 'Current status'|trans }}</th>
+                                <th class="text-right">{{ 'Number of items'|trans }}</th>
+                                <th>{{ 'Shipping'|trans }}</th>
+                                <th>{{ 'Payment'|trans }}</th>
+                                <th class="text-right">{{ 'Total price including VAT'|trans }}</th>
+                                <th class="text-center">{{ 'Detail'|trans }}</th>
+                            </tr>
+                        </thead>
                         {% for order in orders %}
                             <tr>
                                 <td><a href="{{ url('front_customer_order_detail_registered', { orderNumber: order.number }) }}"><span class="underline-small">{{ order.number }}</span></a></td>
                                 <td>{{ order.createdAt|formatDate }}</td>
                                 <td>
-                                    {{ order.status.name }}
+                                    <span class="margin-right-10">{{ order.status.name }}</span>
                                     {% if order.payment.goPay is same as (true) and order.gopayPaid == false %}
                                         <a class="btn btn--success btn--mini" href="{{ url('front_order_repeat_gopay_payment', { urlHash: order.urlHash }) }}">
                                             {{ 'Zaplatit'|trans }}
