design: edit title size and add bigger gaps

--- a/src/Shopsys/ShopBundle/Resources/styles/front/common/components/box/blog.less
+++ b/src/Shopsys/ShopBundle/Resources/styles/front/common/components/box/blog.less
@@ -60,10 +60,10 @@
         border-radius: @radius;
 
         &__title {
-            margin-bottom: 15px;
+            margin-bottom: 25px;
             
             font-weight: 700;
-            font-size: @font-size-big;
+            font-size: 16px;
         }
     }
 
