--- a/app/Resources/ShopsysFrameworkBundle/views/Admin/Content/Advert/detail.html.twig
+++ b/app/Resources/ShopsysFrameworkBundle/views/Admin/Content/Advert/detail.html.twig
@@ -1,4 +1,4 @@
 {% extends '@!ShopsysFramework/Admin/Content/Advert/detail.html.twig' %}
 
-{% block title %}- {{ 'Bannery na hl. stránce'|trans }}{% endblock %}
-{% block h1 %}{{ 'Bannery na hl. stránce'|trans }}{% endblock %}
+{% block title %}- {{ 'Bannery'|trans }}{% endblock %}
+{% block h1 %}{{ 'Bannery'|trans }}{% endblock %}
