--- a/app/Resources/ShopsysFrameworkBundle/views/Admin/Content/Advert/list.html.twig
+++ b/app/Resources/ShopsysFrameworkBundle/views/Admin/Content/Advert/list.html.twig
@@ -1,7 +1,7 @@
 {% extends '@!ShopsysFramework/Admin/Content/Advert/list.html.twig' %}
 
-{% block title %}- {{ 'Bannery na hl. stránce'|trans }}{% endblock %}
-{% block h1 %}{{ 'Bannery na hl. stránce'|trans }}{% endblock %}
+{% block title %}- {{ 'Bannery'|trans }}{% endblock %}
+{% block h1 %}{{ 'Bannery'|trans }}{% endblock %}
 
 {% block btn %}
     <a href="{{ url('admin_advert_new') }}" class="btn btn--plus wrap-bar__btn">
